--- a/app/components/Slider/style.css
+++ b/app/components/Slider/style.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -45,4 +45,21 @@ cursor: pointer;
   width: 100%;
   height: auto;
   z-index: -1;
+}
+.toggleAuto {
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  cursor: pointer;
+  justify-content: center;
+}
+.toggleButton {
+  margin: 10px;
+  padding: 2px;
+  height: 50px;
+  width: 150px;
+  text-align: center;
+  border: #000 1px solid;
+
+  cursor: pointer;
 }
